(test): Add first unit testing module (printing) - Add testing macros to fill common boilerplate - Reimplement assert() to print only the file name - Add unit tests for printing functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,13 @@ cmake_minimum_required(VERSION 3.30.2)
 project(my-utilities)
 
 add_subdirectory(src)
+add_subdirectory(test)
 
-install(TARGETS myutil LIBRARY DESTINATION lib
-		PUBLIC_HEADER DESTINATION include/$(PROJECT_NAME))
+if(DEBUG_ENABLED)
+	enable_testing()
+	add_test(NAME test_util_print COMMAND test_util_print)
+	# add_test(NAME test_util_cmp COMMAND test_util_cmp)
+	# add_test(NAME test_util_to_string COMMAND test_util_to_string)
+	# add_test(NAME test_util_from_string COMMAND test_util_from_string)
+	# add_test(NAME test_util_misc COMMAND test_util_misc)
+endif()
