(chore) Make unit testing & test_macros optional

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,23 @@
 include_directories(../include/)
 
-add_library(myutil 
-	utilities.c 
-	../include/utilities.h
+set(LIB_SOURCES
+	utilities.c
 )
 
-set_target_properties(myutil PROPERTIES PUBLIC_HEADER 
-	dbg.h
-	macros.h
-	utilities.h
+add_library(myutil STATIC ${LIB_SOURCES})
+
+set_target_properties(myutil PROPERTIES
+	PUBLIC_HEADER dbg.h
+	PUBLIC_HEADER macros.h
+	PUBLIC_HEADER utilities.h
 )
+
+if (USE_CHECK)
+	set_target_properties(myutil PROPERTIES
+		PUBLIC_HEADER test_macros.h
+	)
+endif()
+
+install(TARGETS myutil
+	LIBRARY DESTINATION lib/$(PROJECT_NAME)
+	PUBLIC_HEADER DESTINATION include/$(PROJECT_NAME))
