--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ if(USE_CHECK)
 	add_test(NAME test_util_print COMMAND test_util_print)
 	add_test(NAME test_util_cmp COMMAND test_util_cmp)
 	add_test(NAME test_util_to_string COMMAND test_util_to_string)
-	# add_test(NAME test_util_from_string COMMAND test_util_from_string)
+	add_test(NAME test_util_from_string COMMAND test_util_from_string)
 	# add_test(NAME test_util_misc COMMAND test_util_misc)
 endif()
