--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,8 +26,8 @@ target_link_libraries(test_util_cmp ${TEST_LIBS})
 add_executable(test_util_to_string test_util_to_string.c)
 target_link_libraries(test_util_to_string ${TEST_LIBS})
 
-# add_executable(test_util_from_string test_util_from_string.c)
-# target_link_libraries(test_util_from_string ${TEST_LIBS})
+add_executable(test_util_from_string test_util_from_string.c)
+target_link_libraries(test_util_from_string ${TEST_LIBS})
 
 # add_executable(test_util_misc test_util_misc.c)
 # target_link_libraries(test_util_misc ${TEST_LIBS})
