(chore) Fix install system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,18 +6,22 @@ set(LIB_SOURCES
 
 add_library(myutil STATIC ${LIB_SOURCES})
 
-set_target_properties(myutil PROPERTIES
-	PUBLIC_HEADER dbg.h
-	PUBLIC_HEADER macros.h
-	PUBLIC_HEADER utilities.h
+list(APPEND LIB_PUBLIC_HEADERS
+	../include/dbg.h
+	../include/macros.h
+	../include/utilities.h
 )
 
 if (USE_CHECK)
-	set_target_properties(myutil PROPERTIES
-		PUBLIC_HEADER test_macros.h
+	list(APPEND LIB_PUBLIC_HEADERS
+		../include/test_macros.h
 	)
 endif()
 
+set_target_properties(myutil PROPERTIES
+	PUBLIC_HEADER "${LIB_PUBLIC_HEADERS}"
+)
+
 install(TARGETS myutil
-	LIBRARY DESTINATION lib/$(PROJECT_NAME)
-	PUBLIC_HEADER DESTINATION include/$(PROJECT_NAME))
+	LIBRARY DESTINATION lib
+	PUBLIC_HEADER DESTINATION include/${PROJECT_NAME})
